--- a/frontend/public/offline.html
+++ b/frontend/public/offline.html
@@ -62,7 +62,7 @@
     </style>
   </head>
   <body>
-    <img src="/LogoB.png" alt="MundoIAanime Logo" />
+    <img src="/logo.png" alt="MundoIAanime Logo" />
     <h1>Estás sin conexión</h1>
     <p>No pudimos cargar la página. Revisa tu conexión a internet e intenta nuevamente.</p>
     <a href="/">Volver al inicio</a>
